# learn-nn

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  utils.hpp
src/example/: xor.hpp
src/nn/: activation.hpp  neural_network.hpp
